equiptment page mocked up

--- a/www/templates/tab-consultants.html
+++ b/www/templates/tab-consultants.html
@@ -1,7 +1,7 @@
-<ion-view view-title="Equiptment">
+<ion-view view-title="Consultants">
   <ion-content>
     <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="item in items" type="item-text-wrap" href="#/tab/equiptment/{{item.id}}">
+      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="item in items" type="item-text-wrap">
         <img ng-src="{{item.image}}">
         <h2>{{item.name}}</h2>
         <p>{{item.price}}</p>
