--- a/www/templates/equiptment-detail.html
+++ b/www/templates/equiptment-detail.html
@@ -4,11 +4,12 @@
   The FriendsCtrl pulls data from the Friends service (service.js)
   The Friends service returns an array of friend data
 -->
-<ion-view view-title="{{chat.name}}">
+<ion-view view-title="{{item.name}}">
   <ion-content class="padding">
-    <img ng-src="{{chat.face}}" style="width: 64px; height: 64px">
+    <img ng-src="{{item.image}}" style="width: 64px; height: 64px">
+    <h3>{{item.price}}</h3>
     <p>
-      {{chat.lastText}}
+      {{item.description}}
     </p>
   </ion-content>
 </ion-view>
