--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -1,28 +1,32 @@
 <ion-view view-title="Greenwich Fitness">
   <ion-content class="padding">
-    <div class="list card">
-      <div class="item item-divider">Recent Updates</div>
+
+  <div class="list card">
+      <div class="item item-divider">Upcoming</div>
       <div class="item item-body">
         <div>
-          There is a fire in <b>sector 3</b>
+          You are due at the gym in:
         </div>
       </div>
     </div>
+
+    <div class="list card">
+      <div class="item item-divider">Recent Updates at Greenwich Fitness</div>
+      <div class="item item-body">
+        <div>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod mi eros, quis accumsan nisl iaculis eget. Ut suscipit consequat felis, quis auctor ipsum. Integer pharetra dui congue neque efficitur bibendum vel a elit. Nulla elementum, mi feugiat imperdiet lobortis.
+        </div>
+      </div>
+    </div>
+
     <div class="list card">
       <div class="item item-divider">Health</div>
       <div class="item item-body">
         <div>
-          You ate an apple today!
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod mi eros, quis accumsan nisl iaculis eget. Ut suscipit consequat felis, quis auctor ipsum. Integer pharetra dui congue neque efficitur bibendum vel a elit. Nulla elementum, mi feugiat imperdiet lobortis.
         </div>
       </div>
     </div>
-    <div class="list card">
-      <div class="item item-divider">Upcoming</div>
-      <div class="item item-body">
-        <div>
-          You have <b>29</b> meetings on your calendar tomorrow.
-        </div>
-      </div>
-    </div>
+
   </ion-content>
 </ion-view>
