--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -20,8 +20,8 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-reviews"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Consultancy" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/consultancy">
-    <ion-nav-view name="tab-consultancy"></ion-nav-view>
+  <ion-tab title="Consultants" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/consultants">
+    <ion-nav-view name="tab-consultants"></ion-nav-view>
   </ion-tab>
 
   <ion-tab title="Contact" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/contact">
