--- a/www/templates/tab-consultants.html
+++ b/www/templates/tab-consultants.html
@@ -1,13 +1,19 @@
 <ion-view view-title="Consultants">
   <ion-content>
-    <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="item in items" type="item-text-wrap">
-        <img ng-src="{{item.image}}">
-        <h2>{{item.name}}</h2>
-        <p>{{item.price}}</p>
-        <i class="icon ion-chevron-right icon-accessory"></i>
 
-      </ion-item>
-    </ion-list>
+    <div ng-repeat='consultant in consultants' class="list card">
+
+      <div class="item item-avatar">
+        <img ng-src="{{consultant.img}}">
+        <h2>{{consultant.name}}</h2>
+        <p>{{consultant.title}}</p>
+      </div>
+
+      <div class="item item-body">
+        <img class="full-image" ng-src="{{consultant.mainImg}}">
+        <p>{{consultant.profile}}</p>
+      </div>
+    </div>
+
   </ion-content>
 </ion-view>
