added votes into view for reviews

--- a/www/templates/tab-reviews.html
+++ b/www/templates/tab-reviews.html
@@ -21,11 +21,13 @@
         </div>
         <div class="item item-text-wrap">
           {{review.text}}
-          {{review.votes}}
         </div>
         <div class="item item-divider">
           <button ng-click='upvote(review)' class='button button-positive'>+</button>
           <button ng-click='downvote(review)' class='button button-assertive'>-</button>
+          <h2 style='display:inline'>
+            This review has {{review.votes}} votes
+          </h2>
         </div>
       </div>
     </ion-list>
