added settings page

--- a/www/templates/tab-reviews.html
+++ b/www/templates/tab-reviews.html
@@ -10,7 +10,7 @@
       </label>
     </div>
 
-    <button ng-click="post(text, author); text=''; author=''" class="button button-full button-positive">
+    <button ng-click="post(text, author); text=''; author=''" class="button button-block button-positive">
       Post Review
     </button>
 
