--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -28,5 +28,8 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-contact"></ion-nav-view>
   </ion-tab>
 
+  <ion-tab title="Settings" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/settings">
+    <ion-nav-view name="tab-settings"></ion-nav-view>
+  </ion-tab>
 
 </ion-tabs>
