updated toolbar icons

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -11,20 +11,20 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!-- Chats Tab -->
-  <ion-tab title="Equiptment" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/tab/equiptment">
+  <ion-tab title="Equiptment" icon-off="ion-ios-americanfootball" icon-on="ion-ios-americanfootball" href="#/tab/equiptment">
     <ion-nav-view name="tab-equiptment"></ion-nav-view>
   </ion-tab>
 
   <!-- Account Tab -->
-  <ion-tab title="Reviews" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/reviews">
+  <ion-tab title="Reviews" icon-off="ion-chatboxes" icon-on="ion-chatboxes" href="#/tab/reviews">
     <ion-nav-view name="tab-reviews"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Consultants" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/consultants">
+  <ion-tab title="Consultants" icon-off="ion-ios-people" icon-on="ion-ios-people" href="#/tab/consultants">
     <ion-nav-view name="tab-consultants"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Contact" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/contact">
+  <ion-tab title="Contact" icon-off="ion-at" icon-on="ion-at" href="#/tab/contact">
     <ion-nav-view name="tab-contact"></ion-nav-view>
   </ion-tab>
 
