--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,10 +1,13 @@
 /* Empty. Add your own CSS if you like */
 
-.scroll {
-    height: 100%;
+.scroll 
+{
+  height: 100%;
 }
  
-#map {
-    width: 100%;
-    height: 100%;
+#map 
+{
+  margin: 0 auto;
+  width: 100%;
+  height: 50%;
 }
