notifications now toggle on home page

--- a/www/templates/tab-contact.html
+++ b/www/templates/tab-contact.html
@@ -1,5 +1,10 @@
 <ion-view view-title="Contact">
   <ion-content>
+
+    <a href="tel:18475555555">1-847-555-5555</a>
+
+    <a href="mailto:name@rapidtables.com">Send mail</a>
+
     <div id="map" data-tap-disabled="true"></div>
   </ion-content>
 </ion-view>
