slideshow now sliding automatically

--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -12,6 +12,11 @@
         <img src='https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcR3ZIsIM8RQKdsq0n8b_okB4e2fDsfSxfot7-4AYRn8xwWpeD7x4y6uhe8'>
       </div>
     </ion-slide>
+        <ion-slide>
+      <div class="box red">
+        <img src='https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcR3ZIsIM8RQKdsq0n8b_okB4e2fDsfSxfot7-4AYRn8xwWpeD7x4y6uhe8'>
+      </div>
+    </ion-slide>
   </ion-slide-box>
 
   <div class="list card">
