added images/text to slideshow

--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -1,36 +1,64 @@
 <ion-view view-title="Greenwich Fitness">
   <ion-content class="padding">
 
+  <div class="list card">
+    <div class="item item-divider">Upcoming</div>
+    <div class="item item-body">
+      <div ng-hide='settings.notifications'>
+        Switch on visit notifications
+      </div>
+
+      <div ng-show='settings.notifications'>
+        You are due at the gym in:
+      </div>
+    </div>
+  </div>
+
   <ion-slide-box>
     <ion-slide>
-      <div class="box blue">
-        <img src='https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcR3ZIsIM8RQKdsq0n8b_okB4e2fDsfSxfot7-4AYRn8xwWpeD7x4y6uhe8'>
+      <div class='item item-divider'>
+        <h2>Pretty Hate Machine</h2>
+      </div>
+      <div class='list card'>
+        <div class='item item-image'>
+          <img src='http://www.thegymgroup.com/fileadmin/_processed_/csm_VAUX4_f9cb10fa12.jpg'>
+        </div>
       </div>
     </ion-slide>
+
     <ion-slide>
-      <div class="box red">
-        <img src='https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcR3ZIsIM8RQKdsq0n8b_okB4e2fDsfSxfot7-4AYRn8xwWpeD7x4y6uhe8'>
+      <div class='item item-divider'>
+        <h2>Pretty Hate Machine</h2>
+      </div>
+      <div class='list card'>
+        <div class='item item-image'>
+          <img src='http://mohicanentertainment.com/wp-content/uploads/2015/03/Gym.jpg'>
+        </div>
       </div>
     </ion-slide>
-        <ion-slide>
-      <div class="box red">
-        <img src='https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcR3ZIsIM8RQKdsq0n8b_okB4e2fDsfSxfot7-4AYRn8xwWpeD7x4y6uhe8'>
+
+    <ion-slide>
+      <div class='item item-divider'>
+        <h2>Pretty Hate Machine</h2>
+      </div>
+      <div class='list card'>
+        <div class='item item-image'>
+          <img src='http://www.fansshare.com/pictures/gymgirls/beautiful-girl-wallpaper-wallpaper-628597261.jpg'>
+        </div>
+      </div>
+    </ion-slide>
+
+    <ion-slide>
+      <div class='item item-divider'>
+        <h2>Pretty Hate Machine</h2>
+      </div>
+      <div class='list card'>
+        <div class='item item-image'>
+          <img src='http://www.innovationdancestudios.co.uk/wp-content/uploads/class-adult-yoga.jpg'>
+        </div>
       </div>
     </ion-slide>
   </ion-slide-box>
-
-  <div class="list card">
-      <div class="item item-divider">Upcoming</div>
-      <div class="item item-body">
-        <div ng-hide='settings.notifications'>
-          Switch on visit notifications
-        </div>
-
-        <div ng-show='settings.notifications'>
-          You are due at the gym in:
-        </div>
-      </div>
-    </div>
 
     <div class="list card">
       <div class="item item-divider">Recent Updates at Greenwich Fitness</div>
