added styling and links to contact page

--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -17,7 +17,7 @@
   <ion-slide-box>
     <ion-slide>
       <div class='item item-divider'>
-        <h2>Pretty Hate Machine</h2>
+        <h2>Title</h2>
       </div>
       <div class='list card'>
         <div class='item item-image'>
@@ -28,7 +28,7 @@
 
     <ion-slide>
       <div class='item item-divider'>
-        <h2>Pretty Hate Machine</h2>
+        <h2>Title</h2>
       </div>
       <div class='list card'>
         <div class='item item-image'>
@@ -39,7 +39,7 @@
 
     <ion-slide>
       <div class='item item-divider'>
-        <h2>Pretty Hate Machine</h2>
+        <h2>Title</h2>
       </div>
       <div class='list card'>
         <div class='item item-image'>
@@ -50,7 +50,7 @@
 
     <ion-slide>
       <div class='item item-divider'>
-        <h2>Pretty Hate Machine</h2>
+        <h2>Title</h2>
       </div>
       <div class='list card'>
         <div class='item item-image'>
