--- a/www/templates/tab-contact.html
+++ b/www/templates/tab-contact.html
@@ -1,10 +1,30 @@
 <ion-view view-title="Contact">
   <ion-content>
 
-    <a href="tel:18475555555">1-847-555-5555</a>
-
-    <a href="mailto:name@rapidtables.com">Send mail</a>
+    <div style='text-align:center' class="item">
+    <h2>Come and Join Today!</h2>
+    </div>
 
     <div id="map" data-tap-disabled="true"></div>
+
+  <div class="item tabs tabs-secondary tabs-icon-left">
+    <a class="tab-item" href="tel:020837404560">
+      <i class="icon ion-ios-telephone-outline"></i>
+      Call Us
+    </a>
+    <a class="tab-item" href="mailto:enquires@greenwichFitness.com">
+      <i class="icon ion-ios-email-outline"></i>
+      Email Us
+    </a>
+    <a class="tab-item" href="#" ng-click="navigateTo('http://www.facebook.com')">
+      <i class="icon ion-social-facebook-outline"></i>
+      Facebook
+    </a>
+    <a class="tab-item" href="#" ng-click="navigateTo('http://www.twitter.com')">
+      <i class="icon ion-social-twitter-outline"></i>
+      Twitter
+    </a>
+  </div>
+
   </ion-content>
 </ion-view>
