some styling for equiptment detail page

--- a/www/templates/equiptment-detail.html
+++ b/www/templates/equiptment-detail.html
@@ -1,9 +1,16 @@
 <ion-view view-title="{{item.name}}">
   <ion-content class="padding">
-    <img ng-src="{{item.image}}" style="width: 64px; height: 64px">
-    <h3>{{item.price}}</h3>
-    <p>
-      {{item.description}}
-    </p>
+    
+
+    <div class="list card">
+
+  <div class="item item-body">
+    <img class="full-image" ng-src="{{item.image}}">
+    <h1>£{{item.price}}</h1>
+    <p>{{item.description}}</p>
+  </div>
+
+</div>
+
   </ion-content>
 </ion-view>
