--- a/www/templates/tab-reviews.html
+++ b/www/templates/tab-reviews.html
@@ -20,7 +20,7 @@
           {{review.author}} said this on {{review.date}}
         </div>
         <div class="item item-text-wrap">
-          {{review.text}}
+          <p>"{{review.text}}"</p>
         </div>
         <div class="item item-divider">
           <h2 style='display:inline'>
