now communicating with api

--- a/www/templates/tab-consultants.html
+++ b/www/templates/tab-consultants.html
@@ -10,7 +10,7 @@
       </div>
 
       <div class="item item-body">
-        <img class="full-image" ng-src="{{consultant.mainImg}}">
+        <img class="full-image" ng-src="{{consultant.mainimg}}">
         <p>{{consultant.profile}}</p>
       </div>
     </div>
