timer now defaults to daily/some refactoring

--- a/www/templates/tab-settings.html
+++ b/www/templates/tab-settings.html
@@ -21,7 +21,7 @@
         Visit the gym
       </div>
       <select ng-model='option' ng-change='updateFrequency(option)'>
-        <option>Daily</option>
+        <option ng-selected='notifications'>Daily</option>
         <option>Every other day</option>
         <option>Every Three days</option>
         <option>Every Four days</option>
