--- a/www/templates/tab-settings.html
+++ b/www/templates/tab-settings.html
@@ -12,6 +12,26 @@
         </div>
       </label>
     </li>
+
+    <li class="item item-toggle">
+      Larger Text
+      <label class="toggle toggle-assertive">
+        <input ng-click='' type="checkbox">
+        <div class="track">
+          <div class="handle"></div>
+        </div>
+      </label>
+    </li>
+
+    <li class="item item-toggle">
+      Bold Text
+      <label class="toggle toggle-assertive">
+        <input ng-click='' type="checkbox">
+        <div class="track">
+          <div class="handle"></div>
+        </div>
+      </label>
+    </li>
   </ul>
 
   <div ng-show='notifications' class="list">
