--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -39,7 +39,7 @@
     <div class="item item-divider">Upcoming</div>
     <div class="item item-body">
       <div ng-hide='settings.notifications'>
-        <a class='button button-small button-positive' href='#/tab/settings'>Switch on notifications</a>
+        <a class='button button-small button-positive' href='#/tab/settings'>Switch on Timer</a>
       </div>
 
       <div ng-show='settings.notifications'>
