--- a/www/templates/tab-settings.html
+++ b/www/templates/tab-settings.html
@@ -4,7 +4,7 @@
   <ul class="list">
 
     <li class="item item-toggle">
-      Turn on notifications
+      Turn on Timer
       <label class="toggle toggle-assertive">
         <input ng-click='toggle()' type="checkbox">
         <div class="track">
