--- a/www/templates/tab-settings.html
+++ b/www/templates/tab-settings.html
@@ -3,7 +3,7 @@
 
   <ul class="list">
 
-    <li class="item item-toggle">
+    <li class="item item-toggle" ng-class="{'big-font' : large}">
       Turn on Timer
       <label class="toggle toggle-assertive">
         <input ng-click='toggle()' type="checkbox">
@@ -13,17 +13,17 @@
       </label>
     </li>
 
-    <li class="item item-toggle">
+    <li class="item item-toggle" ng-class="{'big-font' : large}">
       Larger Text
       <label class="toggle toggle-assertive">
-        <input ng-click='' type="checkbox">
+        <input ng-click='largerText()' type="checkbox">
         <div class="track">
           <div class="handle"></div>
         </div>
       </label>
     </li>
 
-    <li class="item item-toggle">
+    <li class="item item-toggle" ng-class="{'big-font' : large}">
       Bold Text
       <label class="toggle toggle-assertive">
         <input ng-click='' type="checkbox">
