--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -36,7 +36,7 @@
   </ion-slide-box>
 
   <div class="list card">
-    <div class="item item-divider">Upcoming</div>
+    <div class="item item-divider" ng-class="{'big-font' : settings.large}">Upcoming</div>
     <div class="item item-body">
       <div ng-hide='settings.notifications'>
         <a class='button button-small button-positive' href='#/tab/settings'>Switch on Timer</a>
@@ -50,7 +50,7 @@
   </div>
 
     <div class="list card">
-      <div class="item item-divider">Recent Updates at Greenwich Fitness</div>
+      <div class="item item-divider" ng-class="{'big-font' : settings.large}">Recent Updates at Greenwich Fitness</div>
       <div class="item item-body">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod mi eros, quis accumsan nisl iaculis eget. Ut suscipit consequat felis, quis auctor ipsum. Integer pharetra dui congue neque efficitur bibendum vel a elit. Nulla elementum, mi feugiat imperdiet lobortis.
@@ -59,7 +59,7 @@
     </div>
 
     <div class="list card">
-      <div class="item item-divider">Health</div>
+      <div class="item item-divider" ng-class="{'big-font' : settings.large}">Health</div>
       <div class="item item-body">
         <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod mi eros, quis accumsan nisl iaculis eget. Ut suscipit consequat felis, quis auctor ipsum. Integer pharetra dui congue neque efficitur bibendum vel a elit. Nulla elementum, mi feugiat imperdiet lobortis.
