--- a/www/templates/tab-reviews.html
+++ b/www/templates/tab-reviews.html
@@ -15,22 +15,21 @@
       </button>
     </div>
 
-    <ion-list>
-      <div class="card" ng-repeat='review in reviews'>
-        <div class="item item-divider">
-          {{review.author}} said this on {{review.created_at}}
-        </div>
-        <div class="item item-text-wrap">
-          <p>"{{review.text}}"</p>
-        </div>
-        <div class="item item-divider">
-          <h2 style='display:inline'>
-            This review has {{review.votes}} votes
-          </h2>
-          <button class='button button-small button-positive' ng-click='upvote(review)'>+</button>
-          <button class='button button-small button-assertive' ng-click='downvote(review)'>-</button>
-        </div>
+    <div>
+
+    </div>
+
+    <div class='list card' ng-repeat='review in reviews'>
+      <div class='item item-avatar'>
+        <img src='http://www.thepoweroffollowup.com/clientuploads/reviews-icon.png'>
+        <h4>On {{review.date}}</h4>
+        <h2 style='font-size: 25px'>{{review.author}}<small> said:</small></h2>
       </div>
-    </ion-list>
+
+      <div class='item item-body' style='color: grey;'>
+        "{{review.text}}"
+      </div>
+    </div>
+
   </ion-content>
 </ion-view>
