restlyed home page

--- a/www/templates/tab-equiptment.html
+++ b/www/templates/tab-equiptment.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Equiptment">
+<ion-view view-title="Equipment">
   <ion-content>
     <ion-list>
       <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="item in items" type="item-text-wrap" href="#/tab/equiptment/{{item.id}}">
