--- a/www/templates/tab-reviews.html
+++ b/www/templates/tab-reviews.html
@@ -20,10 +20,10 @@
     </div>
 
     <div class='list card' ng-repeat='review in reviews'>
-      <div class='item item-avatar'>
+      <div class='item item-avatar item-divider'>
         <img src='http://www.thepoweroffollowup.com/clientuploads/reviews-icon.png'>
         <h4>On {{review.date}}</h4>
-        <h2 style='font-size: 25px'>{{review.author}}<small> said:</small></h2>
+        <h2 style='font-size: 25px; color: #387ef5'>{{review.author}}<small> said:</small></h2>
       </div>
 
       <div class='item item-body' style='color: grey;'>
