--- a/www/templates/tab-settings.html
+++ b/www/templates/tab-settings.html
@@ -48,6 +48,16 @@
           </div>
         </label>
       </li>
+
+      <li class="item item-toggle" ng-class="{'big-font' : large}">
+        Invert Colours
+        <label class="toggle toggle-assertive">
+          <input ng-click='' type="checkbox">
+          <div class="track">
+            <div class="handle"></div>
+          </div>
+        </label>
+      </li>
     </ul>
 
   </ion-content>
