added contact us button to consultants page

--- a/www/templates/tab-consultants.html
+++ b/www/templates/tab-consultants.html
@@ -12,6 +12,7 @@
       <div class="item item-body">
         <img class="full-image" ng-src="{{consultant.mainimg}}">
         <p>{{consultant.profile}}</p>
+        <a href='#/tab/contact' class='button button-small button-calm'>Contact us for more info!</a>
       </div>
     </div>
 
