added slideshow images

--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -5,7 +5,7 @@
     <ion-slide>
       <div class='list card'>
         <div class='item item-image'>
-          <img src='http://www.thegymgroup.com/fileadmin/_processed_/csm_VAUX4_f9cb10fa12.jpg'>
+          <img height='350' src='img/slideshow1.jpg'>
         </div>
       </div>
     </ion-slide>
@@ -13,7 +13,7 @@
     <ion-slide>
       <div class='list card'>
         <div class='item item-image'>
-          <img src='http://mohicanentertainment.com/wp-content/uploads/2015/03/Gym.jpg'>
+          <img height='350' src='img/slideshow2.jpg'>
         </div>
       </div>
     </ion-slide>
@@ -21,7 +21,7 @@
     <ion-slide>
       <div class='list card'>
         <div class='item item-image'>
-          <img src='http://www.fansshare.com/pictures/gymgirls/beautiful-girl-wallpaper-wallpaper-628597261.jpg'>
+          <img height='350' src='img/slideshow3.jpg'>
         </div>
       </div>
     </ion-slide>
@@ -29,7 +29,23 @@
     <ion-slide>
       <div class='list card'>
         <div class='item item-image'>
-          <img src='http://www.innovationdancestudios.co.uk/wp-content/uploads/class-adult-yoga.jpg'>
+          <img height='350' src='img/slideshow4.jpg'>
+        </div>
+      </div>
+    </ion-slide>
+
+    <ion-slide>
+      <div class='list card'>
+        <div class='item item-image'>
+          <img height='350' src='img/slideshow5.jpg'>
+        </div>
+      </div>
+    </ion-slide>
+
+    <ion-slide>
+      <div class='list card'>
+        <div class='item item-image'>
+          <img height='350' src='img/slideshow6.jpg'>
         </div>
       </div>
     </ion-slide>
