--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -1,5 +1,5 @@
-<ion-view view-title="Greenwich Fitness">
-  <ion-content class="padding">
+<ion-view view-title="Greenwich School of Fitness">
+  <ion-content>
 
   <ion-slide-box>
     <ion-slide>
@@ -13,7 +13,7 @@
     <ion-slide>
       <div class='list card'>
         <div class='item item-image'>
-          <img height='350' src='img/slideshow2.jpg'>
+          <img height='360' src='img/slideshow2.jpg'>
         </div>
       </div>
     </ion-slide>
