worked on styling

--- a/www/templates/equiptment-detail.html
+++ b/www/templates/equiptment-detail.html
@@ -6,7 +6,7 @@
         <img class="full-image" ng-src="{{item.image}}">
         <h1>£{{item.price}}</h1>
         <p>{{item.description}}</p>
-        <a href='#/tab/contact' class='button button-small button-calm'>Contact us for more info!</a>
+        <a href='#/tab/contact' class='button button-small button-positive'>Contact us for more info!</a>
       </div>
     </div>
 
