--- a/www/templates/tab-reviews.html
+++ b/www/templates/tab-reviews.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class='list card' ng-repeat='review in reviews'>
-      <div class='item item-avatar item-divider'>
+      <div class='item item-avatar item-divider item-light'>
         <img src='http://www.thepoweroffollowup.com/clientuploads/reviews-icon.png'>
         <h4>On {{review.date}}</h4>
         <h2 style='font-size: 25px; color: #387ef5'>{{review.author}}<small> said:</small></h2>
