added different style sheets to invert colours and increase text size

--- a/www/templates/tab-consultants.html
+++ b/www/templates/tab-consultants.html
@@ -9,7 +9,7 @@
         <p>{{consultant.title}}</p>
       </div>
 
-      <div class="item item-body">
+      <div class="item item-body" ng-class="{'big-font' : settings.large}">
         <img class="full-image" ng-src="{{consultant.mainimg}}">
         <p>{{consultant.profile}}</p>
         <a href='#/tab/contact' class='button button-small button-positive'>Contact us for more info!</a>
