added more pictures to slideshow

--- a/www/templates/tab-consultants.html
+++ b/www/templates/tab-consultants.html
@@ -9,10 +9,10 @@
         <p>{{consultant.title}}</p>
       </div>
 
-      <div class="item item-body" ng-class="{'big-font' : settings.large}">
+      <div class="item item-body">
         <img class="full-image" ng-src="{{consultant.mainimg}}">
         <p>{{consultant.profile}}</p>
-        <a href='#/tab/contact' class='button button-small button-positive'>Contact us for more info!</a>
+        <a href='#/tab/contact' class='button button-small button-positive right-button'>Contact us for more info!</a>
       </div>
     </div>
 
