--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -12,7 +12,7 @@
     </ion-slide-box>
 
     <div class="list card">
-      <div class="item item-divider item-positive" ng-class="{'big-font' : settings.large}">Due at the gym in:</div>
+      <div class="item item-divider item-positive">Due at the gym in:</div>
       <div class="item item-body">
         <div ng-hide='settings.notifications'>
         <a class='button button-small button-positive' href='#/tab/settings'>Switch on Timer</a>
