styled timer section

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -16,15 +16,7 @@ p
   text-decoration: bold;
 }
 
-.button-to-right
-{
-  position: absolute;
-  bottom: 27px;
-  right: 27px;
-  width: 90px;
-}
-
-.button-equipment
+.button-center
 {
   width: 100%;
 }
