--- a/www/templates/tab-consultants.html
+++ b/www/templates/tab-consultants.html
@@ -12,7 +12,7 @@
       <div class="item item-body">
         <img class="full-image" ng-src="{{ consultant.mainimg }}">
         <p>{{consultant.profile}}</p>
-        <a href='#/tab/contact' class='button button-small button-positive right-button button-equipment'>Contact us for more info!</a>
+        <a href='#/tab/contact' class='button button-small button-positive right-button button-center'>Contact us for more info!</a>
       </div>
     </div>
 
